[gd_scene load_steps=63 format=3 uid="uid://dctvo1ohh1dnc"]

[ext_resource type="PackedScene" uid="uid://cahfqtrtojgof" path="res://scenes/pulsing_circle_new_version.tscn" id="1_04gay"]
[ext_resource type="Script" path="res://scripts/beat_it_newest.gd" id="1_sh5nd"]
[ext_resource type="Script" path="res://scenes/Levels/rock_bg_sprite.gd" id="2_3bjnr"]
[ext_resource type="PackedScene" uid="uid://cc2qiwmb4inlj" path="res://scenes/challenges/poppable_arc.tscn" id="2_x8l68"]
[ext_resource type="Texture2D" uid="uid://bpuseddnu8b7v" path="res://assets/level_assets/classical/bg_ring.png" id="3_3bnwa"]
[ext_resource type="Script" path="res://scripts/audio_stream_player_2d.gd" id="3_gvgv5"]
[ext_resource type="Script" path="res://scenes/Levels/bg_action_lines.gd" id="4_dwx6y"]
[ext_resource type="Texture2D" uid="uid://bnvmltu5ixga5" path="res://assets/level_assets/classical/bg_action lines.png" id="4_hd1t8"]
[ext_resource type="Script" path="res://scripts/magic_maker.gd" id="4_khxod"]
[ext_resource type="Texture2D" uid="uid://bjpvl7wye4dik" path="res://assets/level_assets/classical/bg_spraypaint.png" id="5_52f5t"]
[ext_resource type="PackedScene" uid="uid://g1prutamg2s3" path="res://scenes/particles/magic_particles.tscn" id="5_qjqcm"]
[ext_resource type="Texture2D" uid="uid://c5cwexu3ts2y1" path="res://assets/level_assets/classical/bg_right_spray.png" id="6_qcpen"]
[ext_resource type="Texture2D" uid="uid://mecy8ne57lvf" path="res://assets/cursor_sprite.png" id="6_vasnw"]
[ext_resource type="Script" path="res://scripts/attack_handler_newest.gd" id="7_fcauf"]
[ext_resource type="Script" path="res://scenes/Levels/rock_bg_spraypaint.gd" id="7_frvb5"]
[ext_resource type="Texture2D" uid="uid://c2uhsnduo55yc" path="res://assets/level_assets/classical/bg_left_spray.png" id="7_riw1i"]
[ext_resource type="PackedScene" uid="uid://povabra474mo" path="res://scenes/white_stomp.tscn" id="8_5usqr"]
[ext_resource type="AudioStream" uid="uid://c8yxgpf6lm40" path="res://music/Micheal Jackson - Beat It.mp3" id="8_grvso"]
[ext_resource type="PackedScene" uid="uid://cb7y6x4rn270v" path="res://bomb_note.tscn" id="11_kmncr"]
[ext_resource type="PackedScene" uid="uid://16aq3nabvm05" path="res://fix_the_wire_top.tscn" id="11_sl6qf"]
[ext_resource type="PackedScene" uid="uid://cgb41vyns58vg" path="res://fix_the_wire_left.tscn" id="12_gmx3m"]
[ext_resource type="PackedScene" uid="uid://treqbo30sr45" path="res://fix_the_wire_right.tscn" id="13_cuyex"]
[ext_resource type="PackedScene" uid="uid://rc2xhtidjyh2" path="res://scenes/one_screen_circle.tscn" id="15_rptrf"]
[ext_resource type="Script" path="res://scripts/score.gd" id="16_a5hb1"]
[ext_resource type="PackedScene" uid="uid://n2iweeeq8eki" path="res://scenes/flipper_obstacle.tscn" id="17_0ugqw"]
[ext_resource type="PackedScene" uid="uid://6q3h01gpjh47" path="res://scenes/spray_paint_minigame_one_screen.tscn" id="17_intcp"]
[ext_resource type="Script" path="res://scripts/combo.gd" id="17_lqqlm"]
[ext_resource type="FontFile" uid="uid://bnits6cmjt52r" path="res://assets/fonts/gambado/fonnts.com-Gambado_Sans_Forte.otf" id="18_36j4h"]
[ext_resource type="Script" path="res://scripts/x_pop_up.gd" id="20_82sbq"]
[ext_resource type="Texture2D" uid="uid://cc56u28lpa0gf" path="res://assets/global_assets/draft_x.png" id="20_oim6v"]
[ext_resource type="AudioStream" uid="uid://c7atm7uv6bxlr" path="res://sounds/WRONG_ANSWER.mp3" id="21_ggcip"]
[ext_resource type="PackedScene" uid="uid://bodetw4ekbg6m" path="res://scenes/pause_menu.tscn" id="24_1xr60"]
[ext_resource type="PackedScene" uid="uid://bc6fia77s2wku" path="res://bonus_zone.tscn" id="25_2u372"]
[ext_resource type="Script" path="res://scenes/combo_counter.gd" id="26_c0qyj"]
[ext_resource type="Texture2D" uid="uid://dr7t07ekx003y" path="res://assets/global_assets/score_bar/backing.png" id="31_4ftxt"]
[ext_resource type="Texture2D" uid="uid://b4x6iy4m6lcow" path="res://assets/global_assets/score_bar/right_accent.png" id="32_d6iry"]
[ext_resource type="Texture2D" uid="uid://cx640jqbd0om2" path="res://assets/global_assets/score_bar/main_card.png" id="33_sogf6"]
[ext_resource type="Script" path="res://scenes/Levels/main_card.gd" id="34_y3321"]
[ext_resource type="Texture2D" uid="uid://dacja82xj05tl" path="res://assets/global_assets/score_bar/left_tab.png" id="35_nkdwx"]
[ext_resource type="Texture2D" uid="uid://bfnudn5yerbo6" path="res://assets/global_assets/score_bar/left_accent.png" id="36_ver06"]
[ext_resource type="PackedScene" uid="uid://cw5is72tmjs6h" path="res://scene_transition.tscn" id="37_hafii"]
[ext_resource type="Texture2D" uid="uid://cmj8dvyotfahc" path="res://assets/global_assets/girl_idle/idle_1.png" id="38_8gxe5"]
[ext_resource type="Script" path="res://scenes/pause_button.gd" id="38_rdb01"]
[ext_resource type="Texture2D" uid="uid://drr217jaqhjvr" path="res://assets/global_assets/pause_button.png" id="38_vcfrv"]
[ext_resource type="Texture2D" uid="uid://cbe8i8u7qd31m" path="res://assets/global_assets/girl_idle/idle_2.png" id="39_3j7d8"]
[ext_resource type="Texture2D" uid="uid://cx7ssx2mpqo87" path="res://assets/global_assets/platform.png" id="40_5pdlf"]
[ext_resource type="Texture2D" uid="uid://bylcqly4md481" path="res://assets/global_assets/girl_idle/idle_3.png" id="40_5terg"]
[ext_resource type="Texture2D" uid="uid://js2app3m7oj2" path="res://assets/global_assets/girl_idle/idle_5.png" id="42_vnlcf"]
[ext_resource type="Script" path="res://scenes/Levels/boy_idle.gd" id="44_2yqyh"]
[ext_resource type="Texture2D" uid="uid://4lkyga610bxn" path="res://assets/global_assets/boy_idle/idle_1.png" id="44_wim36"]
[ext_resource type="Texture2D" uid="uid://dq23h2p0feyg4" path="res://assets/global_assets/boy_idle/idle_2.png" id="45_ncr3o"]
[ext_resource type="Texture2D" uid="uid://cf0pg0uk7n1dg" path="res://assets/global_assets/boy_idle/idle_3.png" id="46_0c66d"]
[ext_resource type="Texture2D" uid="uid://cutw7ejrrqb70" path="res://assets/global_assets/boy_idle/idle_4.png" id="47_wq4hl"]
[ext_resource type="Script" path="res://scenes/Levels/girl_idle.gd" id="49_tyj6v"]
[ext_resource type="Shader" uid="uid://bf7m2yu038fu0" path="res://scenes/Levels/level_layout_files/overlay.tres" id="54_tvv6u"]

[sub_resource type="CanvasTexture" id="CanvasTexture_f4thb"]

[sub_resource type="CanvasTexture" id="CanvasTexture_g7n6l"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fes31"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("44_wim36")
}, {
"duration": 1.0,
"texture": ExtResource("45_ncr3o")
}, {
"duration": 1.0,
"texture": ExtResource("46_0c66d")
}, {
"duration": 1.0,
"texture": ExtResource("47_wq4hl")
}],
"loop": true,
"name": &"default",
"speed": 9.27
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_8sqhi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("38_8gxe5")
}, {
"duration": 1.0,
"texture": ExtResource("39_3j7d8")
}, {
"duration": 1.0,
"texture": ExtResource("40_5terg")
}, {
"duration": 1.0,
"texture": ExtResource("42_vnlcf")
}],
"loop": true,
"name": &"default",
"speed": 9.27
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbgl5"]
size = Vector2(78, 112)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rd005"]
shader = ExtResource("54_tvv6u")
shader_parameter/ColorParameter = Color(0.466667, 0.184314, 0.752941, 0.458824)

[sub_resource type="CanvasTexture" id="CanvasTexture_m3bx5"]

[node name="Beat it Newest" type="Node2D"]
script = ExtResource("1_sh5nd")

[node name="BgSprite" type="Sprite2D" parent="."]
modulate = Color(0.470588, 0.192157, 0.74902, 1)
position = Vector2(954, 542)
scale = Vector2(2560, 1440)
texture = SubResource("CanvasTexture_f4thb")
script = ExtResource("2_3bjnr")

[node name="BgRing" type="PointLight2D" parent="."]
position = Vector2(965, 563)
color = Color(0.975799, 0.452105, 0.243772, 1)
energy = 0.25
texture = ExtResource("3_3bnwa")

[node name="BgActionLines" type="Sprite2D" parent="."]
modulate = Color(0.858824, 0.262745, 0, 0.121569)
position = Vector2(952, 542)
texture = ExtResource("4_hd1t8")
script = ExtResource("4_dwx6y")

[node name="BgSpraypaint" type="Sprite2D" parent="."]
modulate = Color(1, 0.262745, 0.490196, 0.87451)
position = Vector2(952, 542)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_52f5t")
script = ExtResource("7_frvb5")

[node name="BgRightSpray" type="PointLight2D" parent="."]
position = Vector2(1665, 216)
scale = Vector2(0.75, 0.75)
color = Color(0.913725, 0.403922, 0.913725, 1)
energy = 0.5
texture = ExtResource("6_qcpen")

[node name="BgRightSpray2" type="PointLight2D" parent="."]
position = Vector2(1858, 924)
rotation = 2.37888
scale = Vector2(1, 0.75)
color = Color(0.913725, 0.403922, 0.913725, 1)
energy = 0.3
texture = ExtResource("6_qcpen")

[node name="BgLeftSpray" type="PointLight2D" parent="."]
position = Vector2(534, 1016)
scale = Vector2(0.75, 0.75)
color = Color(0.760784, 0.113725, 0.141176, 1)
texture = ExtResource("7_riw1i")

[node name="BgLeftSpray2" type="PointLight2D" parent="."]
position = Vector2(-63, 707)
rotation = 1.80991
scale = Vector2(0.75, 0.75)
color = Color(0.760784, 0.113725, 0.141176, 1)
energy = 0.7
texture = ExtResource("7_riw1i")

[node name="Music Conductor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_grvso")
script = ExtResource("3_gvgv5")
bpm = 138.95

[node name="Pulsing_circle" parent="." instance=ExtResource("1_04gay")]
position = Vector2(954, 542)

[node name="Camera2D" type="Camera2D" parent="Pulsing_circle"]
position = Vector2(0, 7.62939e-06)

[node name="Magic_Maker" type="Node2D" parent="."]
script = ExtResource("4_khxod")

[node name="White_stomp" parent="Magic_Maker" instance=ExtResource("8_5usqr")]
visible = false
position = Vector2(0, 0)

[node name="Magic" parent="Magic_Maker" instance=ExtResource("5_qjqcm")]
lifetime = 0.5

[node name="cursor_sprite" type="Sprite2D" parent="Magic_Maker"]
texture_filter = 1
texture = ExtResource("6_vasnw")

[node name="Attack_Handler" type="Node2D" parent="."]
script = ExtResource("7_fcauf")
osu_circle_scene = ExtResource("15_rptrf")
bomb_note_scene = ExtResource("11_kmncr")
fix_the_wire_top_scene = ExtResource("11_sl6qf")
fix_the_wire_left_scene = ExtResource("12_gmx3m")
fix_the_wire_right_scene = ExtResource("13_cuyex")
flipper_scene = ExtResource("17_0ugqw")

[node name="Poppable Arc" parent="Attack_Handler" instance=ExtResource("2_x8l68")]

[node name="Score" type="RichTextLabel" parent="Attack_Handler"]
visible = false
offset_left = 69.0
offset_top = 220.0
offset_right = 109.0
offset_bottom = 260.0
theme_override_fonts/normal_font = ExtResource("18_36j4h")
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
text = "2000"
script = ExtResource("16_a5hb1")

[node name="Combo" type="RichTextLabel" parent="Attack_Handler"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1550.0
offset_top = 900.0
offset_right = 1710.0
offset_bottom = 1045.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(80, 30)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("18_36j4h")
theme_override_fonts/mono_font = ExtResource("18_36j4h")
theme_override_fonts/italics_font = ExtResource("18_36j4h")
theme_override_fonts/bold_italics_font = ExtResource("18_36j4h")
theme_override_fonts/bold_font = ExtResource("18_36j4h")
theme_override_font_sizes/bold_italics_font_size = 120
theme_override_font_sizes/italics_font_size = 120
theme_override_font_sizes/mono_font_size = 120
theme_override_font_sizes/normal_font_size = 120
theme_override_font_sizes/bold_font_size = 120
bbcode_enabled = true
text = "[center]1[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("17_lqqlm")

[node name="XPopUp" type="Sprite2D" parent="Attack_Handler"]
visible = false
scale = Vector2(0.5, 0.55)
texture = ExtResource("20_oim6v")
script = ExtResource("20_82sbq")

[node name="Error" type="AudioStreamPlayer2D" parent="Attack_Handler"]
position = Vector2(240, 90)
stream = ExtResource("21_ggcip")
volume_db = -14.195

[node name="Spray_paint_minigame_one_screen" parent="." instance=ExtResource("17_intcp")]

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(960, 539)
scale = Vector2(1920, 1080)
texture = SubResource("CanvasTexture_g7n6l")

[node name="Bonus_zone" parent="." instance=ExtResource("25_2u372")]
position = Vector2(1455, 52)

[node name="ScoreBarSprite" type="Node2D" parent="."]

[node name="Backing" type="Sprite2D" parent="ScoreBarSprite"]
modulate = Color(1, 0.443137, 1, 1)
position = Vector2(-55, -36)
scale = Vector2(0.25, 0.25)
texture = ExtResource("31_4ftxt")

[node name="RightAccent" type="Sprite2D" parent="ScoreBarSprite"]
modulate = Color(0.396078, 0.141176, 0.627451, 1)
position = Vector2(-55, -46)
scale = Vector2(0.25, 0.25)
texture = ExtResource("32_d6iry")

[node name="MainCard" type="Sprite2D" parent="ScoreBarSprite"]
modulate = Color(0.905882, 0.25098, 0.537255, 1)
position = Vector2(-55, -36)
scale = Vector2(0.25, 0.21)
texture = ExtResource("33_sogf6")
script = ExtResource("34_y3321")

[node name="LeftTab" type="Sprite2D" parent="ScoreBarSprite"]
modulate = Color(1, 0.443137, 1, 1)
position = Vector2(-55, -36)
scale = Vector2(0.25, 0.25)
texture = ExtResource("35_nkdwx")

[node name="LeftAccent" type="Sprite2D" parent="ScoreBarSprite"]
modulate = Color(0.396078, 0.141176, 0.627451, 1)
position = Vector2(-55, -36)
scale = Vector2(0.25, 0.25)
texture = ExtResource("36_ver06")

[node name="Combo Counter" type="RichTextLabel" parent="."]
anchors_preset = -1
anchor_right = 0.0609375
anchor_bottom = 0.00555556
offset_left = -122.0
offset_top = -83.0
offset_right = 133.0
offset_bottom = 105.0
theme_override_fonts/normal_font = ExtResource("18_36j4h")
theme_override_fonts/mono_font = ExtResource("18_36j4h")
theme_override_fonts/bold_font = ExtResource("18_36j4h")
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 100
theme_override_font_sizes/bold_font_size = 40
text = "0"
fit_content = true
autowrap_mode = 0
script = ExtResource("26_c0qyj")
metadata/_edit_use_anchors_ = true

[node name="Platform" type="Sprite2D" parent="."]
modulate = Color(0.342113, 0.144328, 0.514673, 1)
position = Vector2(954, 542)
texture = ExtResource("40_5pdlf")

[node name="BoyIdle" type="AnimatedSprite2D" parent="."]
position = Vector2(1903, 741)
sprite_frames = SubResource("SpriteFrames_fes31")
autoplay = "default"
script = ExtResource("44_2yqyh")

[node name="GirlIdle" type="AnimatedSprite2D" parent="."]
position = Vector2(-12, 686)
scale = Vector2(0.85, 0.85)
sprite_frames = SubResource("SpriteFrames_8sqhi")
autoplay = "default"
script = ExtResource("49_tyj6v")

[node name="PauseButton" type="Node2D" parent="."]
script = ExtResource("38_rdb01")

[node name="Pause" type="Sprite2D" parent="PauseButton"]
modulate = Color(0.854902, 0.388235, 0.929412, 1)
position = Vector2(2142, -52)
scale = Vector2(0.4, 0.4)
texture = ExtResource("38_vcfrv")

[node name="PauseHoverArea" type="Area2D" parent="PauseButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PauseButton/PauseHoverArea"]
visible = false
position = Vector2(2136, -60)
shape = SubResource("RectangleShape2D_gbgl5")

[node name="PointLight2D" type="PointLight2D" parent="PauseButton"]
visible = false
position = Vector2(2142, -52)
scale = Vector2(0.4, 0.4)
color = Color(0.919425, 0.555235, 0.729699, 1)
energy = 1.39
texture = ExtResource("38_vcfrv")

[node name="PauseMenu" parent="." instance=ExtResource("24_1xr60")]
visible = false
position = Vector2(-328, -178)

[node name="Scene_Transition" parent="." instance=ExtResource("37_hafii")]

[node name="Overlay" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.627451)
material = SubResource("ShaderMaterial_rd005")
position = Vector2(954, 540)
scale = Vector2(2560, 1440)
texture = SubResource("CanvasTexture_m3bx5")

[connection signal="finished" from="Music Conductor" to="." method="_on_music_conductor_finished"]
[connection signal="mouse_entered" from="PauseButton/PauseHoverArea" to="PauseButton" method="_on_pause_hover_area_mouse_entered"]
[connection signal="mouse_exited" from="PauseButton/PauseHoverArea" to="PauseButton" method="_on_pause_hover_area_mouse_exited"]
